tests/purs/failing/DeprecatedFFIPrime.js
exports['a\''] = 0;
exports["\x62\x27"] = 1;
// NOTE: I wanted to use "\c'" here, but langauge-javascript doesn't support it...
exports["c'"] = 2;
exports["\u0064\u0027"] = 3;
